# nutriagentpjt

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package-lock.json  package.json
backend-fastapi/: Dockerfile  main.py  pyproject.toml
backend-fastapi/.docs/: chatbot.openapi.json
backend-fastapi/alembic/: env.py
backend-fastapi/alembic/versions/: 1f4c8072c12f_add_chat_sessions_and_chat_messages_.py  974374726f59_add_food_profile.py
backend-fastapi/app/api/: deps.py
backend-fastapi/app/api/routes/: __init__.py  recommend.py
backend-fastapi/app/chatbot/: dependencies.py  engine.py  router.py  schemas.py
backend-fastapi/app/core/: config.py  database.py
backend-fastapi/app/models/: chat.py  feedback.py  food.py
backend-fastapi/app/schemas/: enums.py  request.py  response.py
backend-fastapi/app/scripts/: backfill_food_profile.py
backend-fastapi/app/services/: food_filter.py  nutrition_calculator.py  reason_tag.py  recommendation.py  scorer.py  user_profile_loader.py
backend-fastapi/docs/: 추천알고리즘.md
backend-fastapi/tests/: test_sanitize_tool_input.py
backend-fastapi/vision/: .dockerignore  .env.example  Dockerfile  README.md  requirements.txt
backend-fastapi/vision/app/: config.py  db.py  inference.py  main.py  model.py  retrieval.py  schemas.py
backend-fastapi/vision/data/: merged_food_db_keyword_avg.csv  vision_nutrition_148.csv
backend-fastapi/vision/scripts/: init_db.py  load_embeddings.py  load_foods.py  test_inference.py
backend-fastapi/vision/sql/: schema.sql
backend-spring/: .dockerignore  (+6 more)
(+356 files in other folders)
